--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
+    "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "firebase": "^9.5.0",
     "react": "17.0.1",
+    "react-devtools": "^4.21.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
