--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "expo": "~43.0.2",
     "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
-    "firebase": "^9.5.0",
     "react": "17.0.1",
     "react-devtools": "^4.21.0",
     "react-dom": "17.0.1",
@@ -25,6 +24,7 @@
     "react-native-paper": "^4.10.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
