--- a/package.json
+++ b/package.json
@@ -1,37 +1,55 @@
 {
-  "name": "todo_list",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-navigation/elements": "^1.2.1",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "axios": "^0.24.0",
-    "expo": "~43.0.2",
-    "expo-font": "~10.0.3",
-    "expo-status-bar": "~1.1.0",
-    "react": "17.0.1",
-    "react-devtools": "^4.21.0",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-paper": "^4.10.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "react-reveal": "^1.2.2",
-    "styled-components": "^5.3.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+    "name": "todo_list",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject",
+        "format": "prettier --check ."
+    },
+    "dependencies": {
+        "@emotion/native": "^11.0.0",
+        "@emotion/react": "^11.7.0",
+        "@react-native-async-storage/async-storage": "~1.15.0",
+        "@react-navigation/elements": "^1.2.1",
+        "@react-navigation/native": "^6.0.6",
+        "@react-navigation/native-stack": "^6.2.5",
+        "axios": "^0.24.0",
+        "eslint-plugin-react-native": "^3.11.0",
+        "expo": "~43.0.2",
+        "expo-font": "~10.0.3",
+        "expo-status-bar": "~1.1.0",
+        "react": "17.0.1",
+        "react-devtools": "^4.21.0",
+        "react-dom": "17.0.1",
+        "react-native": "0.64.3",
+        "react-native-dotenv": "^3.3.0",
+        "react-native-paper": "^4.10.1",
+        "react-native-safe-area-context": "3.3.2",
+        "react-native-screens": "~3.8.0",
+        "react-native-vector-icons": "^9.0.0",
+        "react-native-web": "0.17.1",
+        "react-reveal": "^1.2.2",
+        "styled-components": "^5.3.3"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "@typescript-eslint/eslint-plugin": "^5.5.0",
+        "@typescript-eslint/parser": "^5.5.0",
+        "babel-eslint": "^10.1.0",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "eslint": "^8.3.0",
+        "eslint-config-airbnb": "^19.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.27.1",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "prettier": "^2.5.0"
+    },
+    "private": true
 }
