--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_URL = https://sheet.best/api/sheets/b62a9b47-ddb9-474b-a87c-e863a8bc4735
+API_URLS = https://sheet.best/api/sheets/d8899a97-369e-4831-88f0-2f6bda5f7863
