--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@react-navigation/native": "^6.0.6",
         "@react-navigation/native-stack": "^6.2.5",
         "axios": "^0.24.0",
+        "babel-plugin-inline-dotenv": "^1.6.0",
         "eslint-plugin-react-native": "^3.11.0",
         "expo": "~43.0.2",
         "expo-font": "~10.0.3",
@@ -26,6 +27,7 @@
         "react-devtools": "^4.21.0",
         "react-dom": "17.0.1",
         "react-native": "0.64.3",
+        "react-native-btr": "^2.1.2",
         "react-native-dotenv": "^3.3.0",
         "react-native-paper": "^4.10.1",
         "react-native-safe-area-context": "3.3.2",
