added some code refactor

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_URLS = https://sheet.best/api/sheets/d8899a97-369e-4831-88f0-2f6bda5f7863
+API_URL = https://sheet.best/api/sheets/b7665bba-a83d-4014-8bea-66f01fe43989
