--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "todo_list",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "src/assets/icon.png",
+    "icon": "assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "src/assets/splash.png",
+      "image": "assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -20,7 +20,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "src/assets/adaptive-icon.png",
+        "foregroundImage": "assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
