--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_URLL = https://sheet.best/api/sheets/bc8c1f1d-ab0b-4dc0-8730-e22aaae74a59
+API_URL = https://sheet.best/api/sheets/cbc59a86-f194-40e9-93d4-9a4218f735f3
