--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_URL = https://sheet.best/api/sheets/cbc59a86-f194-40e9-93d4-9a4218f735f3
+API_URLL = https://sheet.best/api/sheets/cbc59a86-f194-40e9-93d4-9a4218f735f3
