--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~43.0.2",
     "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "flow-typed": "^3.5.0",
     "react": "17.0.1",
     "react-devtools": "^4.21.0",
     "react-dom": "17.0.1",
@@ -31,18 +32,18 @@
     "react-native-btr": "^2.1.2",
     "react-native-dotenv": "^3.3.0",
     "react-native-paper": "^4.10.1",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-reveal": "^1.2.2",
-    "styled-components": "^5.3.3",
-    "react-native-reanimated": "~2.2.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/preset-flow": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-flow": "^7.16.5",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "babel-eslint": "^10.1.0",
